organization; components broken out; fits spec

--- a/src/scss/faces.scss
+++ b/src/scss/faces.scss
@@ -2,6 +2,7 @@ $width: 24px;
 $height: 24px;
 
 .face {
+  display: inline-block;
   width: $width;
   height: $height;
   background-image: url(../assets/faces.png);
